# ChopperControl

./: CMakeLists.txt  deb_ppa_upload.sh  rfcomm_arduinobt.sh
arduino/Chopper/: Chopper.pde  IntersemaBaro.h  RangeScanner.cpp  RangeScanner.h
debian/: changelog  choppercontrol.desktop  control  rules
doc/: ChopperControl.fz
src/: CMakeLists.txt  Chopper.workspace
src/ChopperRemote/: Attitude.cpp  Attitude.h  CMakeLists.txt  ChopperRemote.cbp  ChopperRemote.desktop  ChopperRemote.layout  ChopperRemote.pro  ProximityRadar.cpp  ProximityRadar.h  joystick.cpp  joystick.h  main.cpp  mainwindow.cpp  mainwindow.h  qbuild.pro
